# NitroKV

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
docs/: commands.md  pipeline.md  protocol.md
include/nitrokv/command/: commands.hpp  meta.hpp
include/nitrokv/common/: version.hpp
include/nitrokv/core/: cache.hpp  results.hpp
include/nitrokv/dispatcher/: dispatcher.hpp
include/nitrokv/protocol/: commands.hpp  decoding.hpp  detail.hpp  encoding.hpp  meta.hpp  protocol.hpp
src/: CMakeLists.txt  main.cpp
src/command/: CMakeLists.txt  parser.cpp
src/core/: CMakeLists.txt  core.cpp
src/dispatcher/: CMakeLists.txt  dispatcher.cpp
src/protocol/: CMakeLists.txt  decoding.cpp  encoding.cpp  parser.cpp
tests/: CMakeLists.txt  protocol_commands.cpp  protocol_decoding.cpp  protocol_parser.cpp  test.cpp
